# flaco

./: .gitignore  CLAUDE.md  DEMO.md  GRADING.md  HACKATHON3_ULTRAPLAN.md  HACKATHON_PLAN.md  PARITY.md  README.md  RELEASE_NOTES_v3.0.0.md  V2_README.md  install.command  pyproject.toml  setup.sh
.github/: FUNDING.yml
.github/workflows/: test.yml
agents/: architect.md  build-error-resolver.md  chief-of-staff.md  code-reviewer.md  cpp-build-resolver.md  cpp-reviewer.md  csharp-reviewer.md  dart-build-resolver.md  database-reviewer.md  doc-updater.md  docs-lookup.md  e2e-runner.md  flutter-reviewer.md  gan-evaluator.md  gan-generator.md  gan-planner.md  go-build-resolver.md  go-reviewer.md  harness-optimizer.md  healthcare-reviewer.md  homelab-sentinel.md  java-build-resolver.md  java-reviewer.md  kotlin-build-resolver.md  kotlin-reviewer.md  loop-operator.md  opensource-forker.md  opensource-packager.md  opensource-sanitizer.md  performance-optimizer.md  planner.md  python-reviewer.md  pytorch-build-resolver.md  refactor-cleaner.md  rust-build-resolver.md  rust-reviewer.md  security-reviewer.md  tdd-guide.md  typescript-reviewer.md
commands/: aside.md  build-fix.md  checkpoint.md  claw.md  code-review.md  context-budget.md  cpp-build.md  cpp-review.md  cpp-test.md  devfleet.md  docs.md  e2e.md  eval.md  flutter-build.md  flutter-review.md  flutter-test.md  gan-build.md  gan-design.md  go-build.md  go-review.md  go-test.md  gradle-build.md  harness-audit.md  jira.md  kotlin-build.md  kotlin-review.md  kotlin-test.md  learn-eval.md  learn.md  loop-start.md  loop-status.md  model-route.md  multi-backend.md  multi-execute.md  multi-frontend.md  multi-plan.md  multi-workflow.md  orchestrate.md  plan.md  pm2.md  (+25 more)
data/: mount-unas.sh
deploy/: README.md  config.example.toml  install.sh  io.roura.flaco-v2.plist  io.roura.flaco.backup.plist  io.roura.flaco.plist  mount-unas.sh  slack-app-manifest.yaml  smoke-v3.sh
rules/common/: coding-style.md  security.md  testing.md
rules/python/: coding-style.md  security.md  testing.md
rules/rust/: coding-style.md  security.md  testing.md
rules/swift/: coding-style.md  security.md  testing.md
rust/: Cargo.toml
rust/.flacoai-agents/: agent-1776060430615578000.json  agent-1776060430615578000.md  agent-1776060430670497000.json  agent-1776060430670497000.md  agent-1776060437448836000.json  agent-1776060437448836000.md  agent-1776060437488449000.json  agent-1776060437488449000.md  agent-1776119387347510000.json  agent-1776119387347510000.md  agent-1776119387410238000.json  agent-1776119387410238000.md  agent-1776121798106105000.json  agent-1776121798106105000.md  agent-1776121798146272000.json  agent-1776121798146272000.md  agent-1776121904947535000.json  agent-1776121904947535000.md  agent-1776121904986500000.json  agent-1776121904986500000.md  agent-1776121908117108000.json  agent-1776121908117108000.md  agent-1776121908154338000.json  agent-1776121908154338000.md  agent-1776171721871385000.json  agent-1776171721871385000.md  agent-1776171721903455000.json  agent-1776171721903455000.md  agent-1776171730266614000.json  agent-1776171730266614000.md  agent-1776171730293889000.json  agent-1776171730293889000.md  agent-1776379147371525000.json  agent-1776379147371525000.md  agent-1776379147403836000.json  agent-1776379147403836000.md  agent-1776379195617266000.json  agent-1776379195617266000.md  agent-1776379195654674000.json  agent-1776379195654674000.md  (+8 more)
rust/crates/api/src/: client.rs  lib.rs
rust/crates/api/src/providers/: claw_provider.rs  mod.rs  openai_compat.rs
rust/crates/api/tests/: client_integration.rs
rust/crates/channels/: Cargo.toml
rust/crates/channels/src/: agents.rs  commands.rs  domain.rs  frontmatter.rs  gateway.rs  inference.rs  lib.rs  rules.rs  skills.rs  slack.rs  socket_mode.rs
rust/crates/commands/src/: lib.rs
rust/crates/flaco-cli/: Cargo.toml
rust/crates/flaco-cli/src/: init.rs  input.rs  main.rs  render.rs  spinner.rs
rust/crates/flaco-config/: Cargo.toml
rust/crates/flaco-config/src/: lib.rs
rust/crates/flaco-core/: Cargo.toml  README.md
rust/crates/flaco-core/src/: domain.rs  error.rs  features.rs  intent.rs  lib.rs  memory.rs  ollama.rs  persona.rs  runtime.rs  session.rs  welcome.rs
rust/crates/flaco-core/src/tools/: bash.rs  fs_rw.rs  github.rs  jira.rs  memory_tool.rs  mod.rs  research.rs  save_to_unas.rs  scaffold.rs  shortcut.rs  slack_post.rs  weather.rs  web.rs
rust/crates/flaco-core/tests/: integration.rs  ollama_smoke.rs
rust/crates/flaco-slack-v2/: Cargo.toml
rust/crates/flaco-slack-v2/src/: lib.rs
rust/crates/flaco-tui-v2/: Cargo.toml
rust/crates/flaco-tui-v2/src/: lib.rs
rust/crates/flaco-v2/: Cargo.toml
rust/crates/flaco-v2/src/: doctor.rs  main.rs
rust/crates/flaco-web/: Cargo.toml
rust/crates/flaco-web/src/: lib.rs
rust/crates/flaco-web/templates/: index.html
rust/crates/integrations/: Cargo.toml
rust/crates/integrations/src/: lib.rs
rust/crates/integrations/src/connectors/: code.rs  mod.rs  productivity.rs  research.rs  system.rs
rust/crates/memory/: Cargo.toml
rust/crates/memory/src/: lib.rs
rust/crates/model-intel/: Cargo.toml
rust/crates/model-intel/src/: lib.rs
rust/crates/plugins/src/: hooks.rs  lib.rs
rust/crates/runtime/src/: config.rs  lib.rs  oauth.rs  prompt.rs  remote.rs  sandbox.rs  tool_vet.rs
rust/crates/server/: Cargo.toml
rust/crates/server/src/: main.rs
rust/crates/tools/skills/architecture/: SKILL.md
rust/crates/tools/skills/code-review/: SKILL.md
rust/crates/tools/skills/debug/: SKILL.md
rust/crates/tools/skills/deploy-checklist/: SKILL.md
rust/crates/tools/src/: lib.rs
rust/docs/: USER_GUIDE.md
src/: main.py  ollama_client.py  ollama_query_engine.py
train/: .gitignore  README.md  rubric.md
train/colab/: flaco_train.ipynb
train/data/eval/: holdout.jsonl
train/data/seeds/: architecture_seeds.jsonl  chris_memory_facts.jsonl  chris_voice_raw.jsonl
train/scripts/: build_dataset.py  eval_model.py  harvest_luminae.py  harvest_memory.py  harvest_riokit.py  synthesize_pairs.py
(+7 files in other folders)
