[package]
name = "channels"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hmac = "0.12"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
serde_yml = "0.0.12"
sha2 = "0.10"
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"

[lints]
workspace = true
