[package]
name = "flaco-tui-v2"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1"
crossterm = "0.28"
flaco-core = { path = "../flaco-core" }
ratatui = "0.29"
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
